--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <title>Contactme!</title>
+    <title>Book|Now!</title>
   </head>
   <body>
 
     <div class="container mt-5">
-        <h1>Contact Me!</h1>
+        <h1>Book Now!</h1>
         <form class="row g-3" action="https://formsubmit.co/myluve8@gmail.com" method="POST">
           <!-- Honeypot -->
           <input type="text" name="_honey" style="display: none;">
