--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <input type="text" class="form-control" name="phone" id="phoneNumber" placeholder="+1 (415) 867-5309">
           </div>
           <div class="col-md-12">
-            <label for="comments" class="form-label">Message?</label>
-            <textarea class="form-control" id="comments" name="comments,&nbsp;questions" rows="3" required></textarea>
+            <label for="message" class="form-label">Message?</label>
+            <textarea class="form-control" id="message" name="message" rows="3" required></textarea>
           </div>
           <div class="col-md-12">
             <button type="submit" class="btn btn-primary">Submit</button>
