--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <textarea class="form-control" id="message" name="message" rows="3" required></textarea>
           </div>
           <div class="col-md-12">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="next" class="btn btn-primary">Next</button>
           </div>
         </form>
     </div>
